<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivWelcomeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_image" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcomeImage"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tvTextForBusiness"
        style="@style/TextTitleAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/horizontal_margin_end"
        android:text="@string/textForBusiness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcomeImage" />

    <TextView
        android:id="@+id/tvTextDevelopPO"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/horizontal_margin_end"
        android:text="@string/textDevelopPO"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvTextForBusiness" />

    <TextView
        android:id="@+id/tvTitleAbout"
        style="@style/TextTitleAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        android:layout_marginEnd="@dimen/horizontal_margin_end"
        android:text="@string/textTitleAbout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierUpAbout" />

    <TextView
        android:id="@+id/tvTextAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        android:text="@string/textAboutAston"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAbout" />

    <TextView
        android:id="@+id/tvTextOffice"
        style="@style/TextTitleAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/textOffice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextAbout" />

    <Button
        android:id="@+id/btnVacancies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin_button"
        android:text="@string/textVacancies"
        app:layout_constraintBottom_toBottomOf="@id/glBottomButton"
        app:layout_constraintEnd_toStartOf="@+id/btnGallery"
        app:layout_constraintStart_toEndOf="@+id/btnContacts" />

    <Button
        android:id="@+id/btnContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin_button"
        android:text="@string/textContacts"
        app:layout_constraintBottom_toBottomOf="@id/glBottomButton"
        app:layout_constraintEnd_toStartOf="@+id/btnVacancies"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textGallery"
        app:layout_constraintBottom_toBottomOf="@id/glBottomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVacancies" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="30dp" />

    <ScrollView
        android:id="@+id/svOfficeChips"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        android:layout_marginEnd="@dimen/horizontal_margin_end"
        app:layout_constraintBottom_toTopOf="@+id/btnVacancies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextOffice">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.chip.Chip
                style="@style/CustomChip"
                android:text="Москва" />

            <com.google.android.material.chip.Chip
                android:text="Казань"
                style="@style/CustomChip"
                 />

            <com.google.android.material.chip.Chip
                style="@style/CustomChip"
                android:text="Ростов-на-Дону" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChip"
                android:text="Минск" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChip"
                android:text="Гомель" />

        </com.google.android.material.chip.ChipGroup>
    </ScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierUpAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvTextDevelopPO, ivLogo"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupOfficeAndButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvTextOffice,btnContacts, btnGallery, btnVacancies, svOfficeChips" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/glBottomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextAbout" />

</androidx.constraintlayout.widget.ConstraintLayout>