<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/ivWelcomeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_image" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcomeImage"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tvTextForBusiness"
        style="@style/TextTitleAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/horizontal_margin_end"
        android:text="@string/textForBusiness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcomeImage" />

    <TextView
        android:id="@+id/tvTextDevelopPO"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/horizontal_margin_end"
        android:text="@string/textDevelopPO"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvTextForBusiness" />

    <TextView
        android:id="@+id/tvTitleAbout"
        style="@style/TextTitleAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        android:layout_marginEnd="@dimen/horizontal_margin_end"
        android:text="@string/textTitleAbout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierUpAbout" />

    <TextView
        android:id="@+id/tvTextAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_start"
        android:text="@string/textAboutAston"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAbout" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierUpAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvTextDevelopPO, ivLogo"
        />


</androidx.constraintlayout.widget.ConstraintLayout>